fix video overflow

--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,12 @@ body {
   height: 100%;
   width: 100%;
   z-index: -10;
-  opacity: .15; }
+  opacity: .15;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 .row {
   max-width: 114rem;
